--- a/languageModel.yaml
+++ b/languageModel.yaml
@@ -12,7 +12,7 @@ inputs:
     default: "S*3,F*1,S*2"
   - name: model
     type: String
-    default: "gemma"     # options: "gemma" or "gptneox"
+    default: "gptneox"     # options: "gemma" or "gptneox"
 
 outputs:
   - name: model_weights
@@ -26,7 +26,7 @@ outputs:
 
 implementation:
   container:
-    image: gurpreetgandhi/nesy-factory:v21
+    image: gurpreetgandhi/nesy-factory:v24
     command:
       - bash
       - -eux
@@ -35,13 +35,12 @@ implementation:
         set -o pipefail
         echo "[DEBUG] raw argv from engine: $@"
 
-        # ---- shim: some engines inject the first input as a positional arg ----
         if [[ "${1-}" != "" && "${1#-}" = "$1" ]]; then
           echo "[WARN] First arg appears positional: $1 ; injecting --tokenizer-json"
           set -- --tokenizer-json "$1" "${@:2}"
         fi
         echo "[DEBUG] argv after shim: $@"
-        # -----------------------------------------------------------------------
+
 
         cat >/tmp/build_model.py <<'PY'
         import argparse, json, os, sys
